[package]
name = "sodoken"
version = "0.0.903-alpha"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2021"
description = "libsodium wrapper providing tokio safe memory secure api access."
keywords = [ "holochain", "holo", "nacl", "libsodium", "cryptography" ]
categories = [ "cryptography" ]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/sodoken"
repository = "https://github.com/holochain/sodoken"
resolver = "2"

[dependencies]
libc = "0.2.169"
libsodium-sys = { version = "1.22.2", package = "libsodium-sys-stable" }
zeroize = "1.8.1"

[dev-dependencies]
criterion = "0.5.1"

[package.metadata.docs.rs]
all-features = true

[features]
default = []

[[bench]]
name = "blake2b"
harness = false

[[bench]]
name = "random"
harness = false

[[bench]]
name = "sign"
harness = false
