[package]
name = "sodoken"
version = "0.0.4"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2021"
description = "libsodium wrapper providing tokio safe memory secure api access."
keywords = [ "holochain", "holo", "nacl", "libsodium", "cryptography" ]
categories = [ "cryptography" ]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/sodoken"
repository = "https://github.com/holochain/sodoken"

[dependencies]
libc = "0.2.104"
libsodium-sys = { version = "1.19.22", package = "libsodium-sys-stable" }
num_cpus = "1.13.0"
once_cell = "1.8.0"
one_err = "0.0.5"
parking_lot = "0.11.2"
tokio = { version = "1.12.0", features = ["sync", "rt"] }

[dev-dependencies]
criterion = "0.3.5"
tokio = { version = "1.12.0", features = ["full"] }

[[bench]]
name = "blake2b"
harness = false

[[bench]]
name = "random"
harness = false

[[bench]]
name = "sign"
harness = false
