[package]
name = "sodoken"
version = "0.0.7"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2021"
description = "libsodium wrapper providing tokio safe memory secure api access."
keywords = [ "holochain", "holo", "nacl", "libsodium", "cryptography" ]
categories = [ "cryptography" ]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/sodoken"
repository = "https://github.com/holochain/sodoken"

[dependencies]
libc = "0.2.138"
libsodium-sys = { version = "1.19.26", package = "libsodium-sys-stable" }
num_cpus = "1.14.0"
once_cell = "1.16.0"
one_err = "0.0.8"
parking_lot = "0.12.1"
tokio = { version = "1.23.0", features = ["sync", "rt"] }

[dev-dependencies]
criterion = "0.4.0"
tokio = { version = "1.23.0", features = ["full"] }

[[bench]]
name = "blake2b"
harness = false

[[bench]]
name = "random"
harness = false

[[bench]]
name = "sign"
harness = false
